# cinemath

./: .env.example  .gitignore  MOVED.md  README.md  examples  pyproject.toml
.github/workflows/: ci.yml
docs/: calculus_problem_sources.md  cinemath_showcase_report.tex  references.bib
examples/: 01_watermelons.txt  02_linear_equation.txt  03_percent_off.txt  04_quadratic.txt  05_pythagoras.txt  06_derivative.txt  07_double_integral.md  08_euler_totient.md  09_improper_integral.md  10_scalar_decay.md  11_long_multiplication.txt  12_long_division.txt  13_decimal_multiplication.txt  14_long_addition.txt  15_long_subtraction.txt  README.md
problems/: README.md
problems/by-type/: README.md
problems/curated/: 02_linear_equation.txt  03_percent_off.txt  04_quadratic.txt  06_derivative.txt  07_double_integral.md  08_euler_totient.md  09_improper_integral.md  10_scalar_decay.md  11_long_multiplication.txt  12_long_division.txt  13_decimal_multiplication.txt  14_long_addition.txt  15_long_subtraction.txt  16_linear_system_2d.txt  17_linear_system_3d.txt  18_lamar_integration_by_parts.txt  19_mit_sine_integral.txt  20_partial_derivative.txt  21_triple_integral.md  README.md
problems/lamar/: README.md
scripts/: sync_problem_banks.py
tests/: catalog_io.py  conftest.py  show_catalog_io.py  test_api_models.py  test_board_side_math.py  test_calculus_catalog.py  test_catalog.py  test_e2e_examples.py  test_instructions.py  test_llm_models.py  test_logger.py  test_quadratic_catalog_e2e.py  test_render.py  test_render_progress.py  test_validate_plan.py  test_verify.py
(+1691 files in other folders)
